# shopping_platform

./: CMakeLists.txt  README.md
include/: Client.h  Commodity.h  Database.h  Network.h  Order.h  OrderManager.h  Protocol.h  Server.h  ShoppingCart.h  User.h
src/: Client.cpp  Commodity.cpp  Database.cpp  Network.cpp  Order.cpp  OrderManager.cpp  Server.cpp  ShoppingCart.cpp  User.cpp  client_main.cpp  main.cpp  server_main.cpp
